syntax = "proto3";
package icbt;
option go_package = "github.com/dropwhile/icanbringthat/rpc/icbt";

import "google/protobuf/timestamp.proto";

service Rpc {
  // events
  rpc EventCreate(EventCreateRequest) returns (EventCreateResponse);
  rpc EventUpdate(EventUpdateRequest) returns (Empty);
  rpc EventDelete(EventDeleteRequest) returns (Empty);
  rpc EventsList(EventsListRequest) returns (EventsListResponse);
  rpc EventGetDetails(EventGetDetailsRequest) returns (EventGetDetailsResponse);
  rpc EventListItems(EventListItemsRequest) returns (EventListItemsResponse);
  rpc EventListEarmarks(EventListEarmarksRequest)
      returns (EventListEarmarksResponse);
  // rpc UpdateEventItemsSorting : TODO

  // event-items
  rpc EventAddItem(EventAddItemRequest) returns (EventAddItemResponse);
  rpc EventUpdateItem(EventUpdateItemRequest) returns (EventUpdateItemResponse);
  rpc EventRemoveItem(EventRemoveItemRequest) returns (Empty);

  // earmarks
  rpc EarmarkCreate(EarmarkCreateRequest) returns (EarmarkCreateResponse);
  rpc EarmarkGetDetails(EarmarkGetDetailsRequest)
      returns (EarmarkGetDetailsResponse);
  rpc EarmarkRemove(EarmarkRemoveRequest) returns (Empty);
  rpc EarmarksList(EarmarksListRequest) returns (EarmarksListResponse);

  // favorites
  rpc FavoriteAdd(FavoriteCreateRequest) returns (FavoriteCreateResponse);
  rpc FavoriteRemove(FavoriteRemoveRequest) returns (Empty);
  rpc FavoriteListEvents(FavoriteListEventsRequest)
      returns (FavoriteListEventsResponse);

  // notifications
  rpc NotificationDelete(NotificationDeleteRequest) returns (Empty);
  rpc NotificationsDeleteAll(Empty) returns (Empty);
  rpc NotificationsList(NotificationsListRequest)
      returns (NotificationsListResponse);
}

/**
  Common Types
**/

message Empty {}

message PaginationRequest {
  uint32 limit = 1;
  uint32 offset = 2;
}

message PaginationResult {
  uint32 limit = 1;
  uint32 offset = 2;
  uint32 count = 3;
}

message TimestampTZ {
  google.protobuf.Timestamp ts = 1;  // timestamp
  string tz = 2;                     // timezone
}

message Event {
  string ref_id = 1;
  string name = 2;
  string description = 3;
  TimestampTZ when = 4;
  bool archived = 5;
  google.protobuf.Timestamp created = 6;
}

message EventItem {
  string ref_id = 1;
  string description = 2;
  google.protobuf.Timestamp created = 3;
}

message Earmark {
  string ref_id = 1;
  string event_item_ref_id = 2;
  string note = 3;
  string owner = 4;
  google.protobuf.Timestamp created = 5;
}

message Favorite {
  string event_ref_id = 1;  // event ref-id
  google.protobuf.Timestamp created = 2;
}

message Notification {
  string ref_id = 1;
  string message = 2;
  google.protobuf.Timestamp created = 3;
}

/**
  Method specific types
**/

/* event */

message EventCreateRequest {
  string name = 1;
  string description = 2;
  TimestampTZ when = 3;
}

message EventCreateResponse {
  Event event = 1;
}

message EventDeleteRequest {
  string ref_id = 1;
}

message EventUpdateRequest {
  string ref_id = 1;
  optional string name = 2;
  optional string description = 3;
  optional TimestampTZ when = 4;
}

message EventGetDetailsRequest {
  string ref_id = 1;
}

message EventGetDetailsResponse {
  Event event = 1;
  repeated EventItem items = 2;
  repeated Earmark earmarks = 3;
}

message EventsListRequest {
  optional PaginationRequest pagination = 1;
  optional bool archived = 2;
}

message EventsListResponse {
  repeated Event events = 1;
  optional PaginationResult pagination = 2;
}

message EventListItemsRequest {
  string ref_id = 1;  // event ref-id
}

message EventListItemsResponse {
  repeated EventItem items = 1;
  optional PaginationResult pagination = 2;
}

message EventListEarmarksRequest {
  string ref_id = 1;  // event ref-id
}

message EventListEarmarksResponse {
  repeated Earmark earmarks = 1;
  optional PaginationResult pagination = 2;
}

/* event-items */

message EventAddItemRequest {
  string event_ref_id = 1;
  string description = 2;
}

message EventAddItemResponse {
  EventItem event_item = 1;
}

message EventRemoveItemRequest {
  string ref_id = 1;
}

message EventUpdateItemRequest {
  string ref_id = 1;
  string description = 2;
}

message EventUpdateItemResponse {
  EventItem event_item = 1;
}

/* earmarks */

message EarmarkCreateRequest {
  string event_item_ref_id = 1;
  string note = 2;
}

message EarmarkCreateResponse {
  Earmark earmark = 1;
}

message EarmarkRemoveRequest {
  string ref_id = 1;
}

message EarmarkGetDetailsRequest {
  string ref_id = 1;
}

message EarmarkGetDetailsResponse {
  Earmark earmark = 1;
  string event_ref_id = 2;
}

message EarmarksListRequest {
  optional PaginationRequest pagination = 1;
  optional bool archived = 2;
}

message EarmarksListResponse {
  repeated Earmark earmarks = 1;
  optional PaginationResult pagination = 2;
}

/* favorites */

message FavoriteCreateRequest {
  string event_ref_id = 1;  // event ref-id
}

message FavoriteCreateResponse {
  Favorite favorite = 1;
}

message FavoriteRemoveRequest {
  string event_ref_id = 1;  // event ref-id
}

message FavoriteListEventsRequest {
  optional PaginationRequest pagination = 1;
  optional bool archived = 2;
}

message FavoriteListEventsResponse {
  repeated Event events = 1;
  optional PaginationResult pagination = 2;
}

/* notifications */

message NotificationDeleteRequest {
  string ref_id = 1;
}

message NotificationsListRequest {
  optional PaginationRequest pagination = 1;
}

message NotificationsListResponse {
  repeated Notification notifications = 1;
  optional PaginationResult pagination = 2;
}
